force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <description>This object is to track the details for each transaction record</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TN-{000000000}</displayFormat>
        <label>Transaction No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>