force-app/main/default/objects/Transaction__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to store the total cost of all the items stored under a transaction record.</description>
    <label>Total Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>