force-app/main/default/objects/Transaction__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <description>This field is used to store the total discounts for all the items under the parent transaction record.</description>
    <label>Total Discount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>