force-app/main/default/objects/Transaction__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>This field is used to store the time stamp of the transaction date</description>
    <label>Transaction Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>